@@ -1,3 +1,11 @@
+Sun Jun 16 20:38:27 2002  Krishnakumar B  <kitty@cs.wustl.edu>
+
+        * ace/DLL_Manager.cpp (ACE_DLL_Handle):
+        * ace/DLL.cpp:
+
+          More mismatched delete/delete[] errors. I am fixing the easier
+          ones. There may be more.
+
 Sun Jun 16 20:22:28 2002  Krishnakumar B  <kitty@cs.wustl.edu>
 
         * ACEXML/common/AttributesImpl.i (qName):
@@ -5,7 +13,7 @@ Sun Jun 16 20:22:28 2002  Krishnakumar B  <kitty@cs.wustl.edu>
           Fixed memory leaks caused by mismatched delete/delete[]. Caught
           by Valgrind.
 
-        * /ACEXML/examples/SAXPrint/main.cpp:
+        * ACEXML/examples/SAXPrint/main.cpp:
 
           Give useful usage messages.
 
